--- a/Ders2App/Views/Shared/_Layout.cshtml
+++ b/Ders2App/Views/Shared/_Layout.cshtml
@@ -15,33 +15,28 @@
 
 
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebSiteName</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a href="/Home/about">About</a></li>
-                <li><a href="/">Home</a></li>
-            </ul>
+  
+    <div class="container body-content">
+
+
+        <div class="row">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">WebSiteName</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/Home/about">About</a></li>
+                        <li><a href="/">Home</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
 
-
-
-
-
-
-
-    <div>
-        <div class="container">
+        <div class="row">
             @RenderBody()
         </div>
-
-
-
-
-
     </div>
+
 </body>
 </html>
