--- a/Ders2App/wwwroot/css/site.css
+++ b/Ders2App/wwwroot/css/site.css
@@ -1,3 +1,11 @@
 ﻿body {
-    background-color:aqua;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    background-image: url('/images/pattern.png');
+    background-repeat: repeat;
+}
+
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
 }
